# Zaml

./: .gitignore  4cBuildWeb.bat  4cBuildWin.bat  CMakeLists.txt  README.md  project.4coder
Scripts/: json_to_zaml.py  ninja_test.yaml  test.yaml
assets/: config.nyml  config.yaml  ninjato.json  ninjato.nyml
src/: Nyml.h  ScopeProfiler.h  Zaml.h  main.cpp
web_build/: EmscriptenBuild.bat  index.html
web_build/assets/: config.yaml  level0.zaml
